[package]
name = "delorean_arrow"
version = "0.1.0"
authors = ["alamb <andrew@nerdnetworks.org>"]
edition = "2018"
description = "Apache Arrow / Parquet / DataFusion dependencies for delorean, to ensure consistent versions and unified updates"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We are using development version of arrow/parquet/datafusion and the dependencies are at the same rev

# The version can be found here: https://github.com/apache/arrow/commit/7696b89e68637ea1c54ef806a095a18ea7b2936f
#
arrow = { git = "https://github.com/apache/arrow.git", rev = "7696b89e68637ea1c54ef806a095a18ea7b2936f" , features = ["simd"] }
datafusion = { git = "https://github.com/apache/arrow.git", rev = "7696b89e68637ea1c54ef806a095a18ea7b2936f" }
# Turn off the "arrow" feature; it currently has a bug that causes the crate to rebuild every time
# and we're not currently using it anyway
parquet = { git = "https://github.com/apache/arrow.git", rev = "7696b89e68637ea1c54ef806a095a18ea7b2936f", default-features = false, features = ["snap", "brotli", "flate2", "lz4", "zstd"] }
