[package]
name = "delorean_arrow"
version = "0.1.0"
authors = ["alamb <andrew@nerdnetworks.org>"]
edition = "2018"
description = "Apache Arrow / Parquet / DataFusion dependencies for delorean, to ensure consistent versions and unified updates"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We are using development version of arrow/parquet/datafusion and the dependencies are at the same rev

# The version can be found here: https://github.com/apache/arrow/commit/eea8d352bf3196a29c1ccf5e6c7342913916048a
#
arrow = { git = "https://github.com/apache/arrow.git", rev = "eea8d352bf3196a29c1ccf5e6c7342913916048a" , features = ["simd"] }
datafusion = { git = "https://github.com/apache/arrow.git", rev = "eea8d352bf3196a29c1ccf5e6c7342913916048a" }
# Turn off the "arrow" feature; it currently has a bug that causes the crate to rebuild every time
# and we're not currently using it anyway
parquet = { git = "https://github.com/apache/arrow.git", rev = "eea8d352bf3196a29c1ccf5e6c7342913916048a", default-features = false, features = ["snap", "brotli", "flate2", "lz4", "zstd"] }
