[package]
name = "delorean_cluster"
version = "0.1.0"
authors = ["pauldix <paul@pauldix.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.6"
serde = "1.0"
serde_json = "1.0"
async-trait = "0.1"
data_types = { path = "../data_types" }
delorean_generated_types = { path = "../delorean_generated_types" }
delorean_line_parser = { path = "../delorean_line_parser" }
delorean_storage = { path = "../delorean_storage" }
delorean_write_buffer = { path = "../delorean_write_buffer" }
object_store = { path = "../object_store" }
tokio = { version = "0.2", features = ["full"] }
delorean_arrow = { path = "../delorean_arrow" }
futures = "0.3.7"
bytes = "0.5"
