[package]
name = "delorean_generated_types"
version = "0.1.0"
authors = ["Paul Dix <paul@pauldix.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatbuffers = "0.6.1"
futures = "0.3.1"
prost = "0.6.1"
prost-types = "0.6.1"
tonic = "0.2.0"

[build-dependencies]
tonic-build = "0.2.0"
