[package]
name = "delorean_ingest"
version = "0.1.0"
authors = ["Andrew Lamb <alamb@influxdata.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# I get a build error when I use this one:
# failed to run custom build command for `arrow-flight v0.17.0`
#parquet = "0.17.0"
# this, we are living on the edge and pull directly from the arrow repo.
# https://github.com/apache/arrow/commit/04a1867eeb58f0c515e7ee5a6300a8f61045a6cd
parquet = { git = "https://github.com/apache/arrow.git", rev="04a1867eeb58f0c515e7ee5a6300a8f61045a6cd", version = "1.0.0-SNAPSHOT" }


snafu = "0.6.2"
env_logger = "0.7.1"
log = "0.4.8"
delorean_line_parser = { path = "../delorean_line_parser" }
delorean_table = { path = "../delorean_table" }
delorean_table_schema = { path = "../delorean_table_schema" }
delorean_tsm = { path = "../delorean_tsm" }

[dev-dependencies]
delorean_test_helpers ={ path = "../delorean_test_helpers" }
