[package]
name = "delorean_ingest"
version = "0.1.0"
authors = ["Andrew Lamb <alamb@influxdata.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

snafu = "0.6.2"
env_logger = "0.7.1"
log = "0.4.8"
delorean_line_parser = { path = "../delorean_line_parser" }
delorean_table = { path = "../delorean_table" }
delorean_table_schema = { path = "../delorean_table_schema" }
delorean_tsm = { path = "../delorean_tsm" }

[dev-dependencies]
delorean_test_helpers ={ path = "../delorean_test_helpers" }
libflate = "1.0.0"
